src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ER_BUText__c</fullName>
        <label>BU Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <defaultValue>&apos;--None--&apos;</defaultValue>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_BypassVR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassVR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_BypassWF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Workflow Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_bypassTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bypassTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_AC_User_Code__c</fullName>
        <label>AC User Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_LDAPUserId__c</fullName>
        <label>LDAP UserId</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One__c</fullName>
        <defaultValue>1</defaultValue>
        <label>One</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>KNOWLEDGE_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Tutti gli utenti</label>
        <language>it</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>